--- a/docs/views/sidebargroup/技术栈.md
+++ b/docs/views/sidebargroup/技术栈.md
@@ -6,12 +6,11 @@ tags:
 - webpack
 ---
 
-:tada: :100:
 
 bar1
 <div v-for="i in 3" class="aa">遍历 ： {{ i }} </div>
 
-<div v-for="item in aa" :class="item.className">遍历 ： {{ item.name }} </div>
+<!-- <div v-for="item in aa" :class="item.className">遍历 ： {{ item.name }} </div> -->
 
 <input type='text'>
 <input type='password'>
@@ -49,7 +48,7 @@ console.log('你好，VuePress！')
     div.ceshi4{color:blue;}
 </style>
 
-<script>
+<!-- <script>
 export default {
   data() {
     return {
@@ -69,4 +68,4 @@ export default {
     })
   }
 }
-</script>
+</script> -->
