--- a/docs/views/sidebargroup/云枢二开.md
+++ b/docs/views/sidebargroup/云枢二开.md
@@ -44,6 +44,18 @@ title: 云枢二开
     mobile：【npm run mobile】
     admin：【npm run admin】
 ```
+```
+    本地启动产品可能启动不起来或启动后不能登录，
+    解决办法：
+    portal：
+        localhost:9100 到登录页，复制服务器访问的token到localhost，进行启动
+    mobile：
+        同上
+    admin：
+        访问localhost：9000，（注意不要访问localhost:9000/admin） 然后复制token 
+```
+
+
 6. 打包前端
 ```
     portal：【npm run build-portal】
